.gitignore *.Publish.xml

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ _Re[Ss]harper.*
 import/wp_gwo_cformsdata.sql
 import/wp_gwo_cformssubmissions.sql
 src/Gemeihnwohloekonomie-DB.userprefs
+*.Publish.xml
