--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Tools\Updater\Steps\UpdateToVs3.cs" />
     <Compile Include="Tools\Updater\Steps\UpdateToVs4.cs" />
     <Compile Include="Tools\Updater\Steps\UpdateToVs5.cs" />
+    <Compile Include="Tools\Updater\Steps\UpdateToVs6.cs" />
     <Compile Include="Tools\Updater\Update.cs" />
     <Compile Include="Tools\Updater\UpdateStepExecuter.cs" />
     <Compile Include="Web\ActionFilter\AccessOnlyIfAdmin.cs" />
@@ -176,6 +177,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Tools\Updater\Scripts\4-add-table-politician-and-person.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Tools\Updater\Scripts\6-countries.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Tools\Updater\Scripts\5-create-tbl-persistentLogin.sql">
